[package]
name = "custom_scroll_group"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1", git = "https://github.com/fltk-rs/fltk-rs" }
event-emitter-rs = "0.1.4"
serde = "1.0.126"
lazy_static = "1.4.0"
# comp_state = "0.2.8"
state = "0.5.2"