[package]
name = "event_dispatcher"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "demonstrates using event-emitter-rs to handle app events"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2"}
hey_listen = "0.5"
lazy_static = "1.4.0"
event-emitter-rs = "0.1.4"