[package]
name = "fuzzy_search"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.2"
sublime_fuzzy = "0.7.0"
rand = "0.8.0"

