[package]
name = "template"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "0.16.5"
image = "0.23.14"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
piston-history_tree = "0.1.0"