[package]
name = "imageproc_effects_layers"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "0.12.0"
imageproc = "0.22.0"
image = "0.23.12"
strum = "0.16.0"
strum_macros = "0.16.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
field_types = "1.1.0"