[package]
name = "template"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1", git = "https://github.com/fltk-rs/fltk-rs" }
comp_state = "0.2.6"
uuid = {version = "0.8.2", features = ["v4"]}
event-emitter-rs = "0.1.4"
serde = { version = "1.0.126", features = ["derive"] }
state = { version = "0.5.2", features = ["tls"] }
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
dyn-clone = "1.0.4"
dashmap = "4.0.2"
multi_mut = "0.1.3"
colored = "2.0.0"
enum_dispatch = "0.3.7"