[package]
name = "noise_generator"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "noise texture generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "0.12.0"
rand = "0.8.0"
noise = "0.7.0"
