[package]
name = "scroll_group"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "custom scroll group using fltk 0.15.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "0.16.5"
rand = "0.8.0"

