[package]
name = "speedy2d_scroll_zoom_canvas"
version = "0.1.0"
authors = ["Webb Hinton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "0.16", features = ["enable-glwindow"] }
speedy2d = { version = "1.0.7", git = "https://github.com/QuantumBadger/Speedy2D", default-features = true }
gl = "0.14"
image = "0.23.14"
dyn-clone = "1.0.4"