[package]
name = "template"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.0.20", git = "https://github.com/fltk-rs/fltk-rs", features = ["no-gdiplus"] }
state = "0.5.2"
comp_state = "0.2.6"
eventually = "0.4.0"